# sciter_test

./: Cargo.toml  index.htm  jsconfig.json
resources/css/: style.css
resources/js/: panel.js  widget.js
src/: main.rs
