[package]
name = "sciter_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sciter-rs = {version="*", features=["windowless"]}
winit = "0.27.3"
winapi = { version = "0.3", features = [
  "impl-default",
  "winuser",
  "wingdi",
  "sysinfoapi",
] }
raw-window-handle = "0.5.0"